[package]
name = "power_unlicheted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_asset_loader = "0.9"
bevy_ecs_tilemap = "0.5"
alea = "0.2"
heron = { version = "2.0.1", features = ["2d"] }
itertools = "0.10.2"

[dependencies.bevy]
version = "0.6"
default-features = false
features = [
  "render",
  "bevy_winit",
  "bevy_gilrs",
  "png",
  "hdr",
  "filesystem_watcher",
  "x11"
]

[dependencies.bevy_kira_audio]
version = "0.8.0"
default-features = false
features = [
  "wav",
]
